--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "8080:8000"
     volumes:
       - ./app:/app
+      - dev-static-data:/vol/web
     command: >
       sh -c "python manage.py wait_for_db &&
             python manage.py migrate &&
@@ -21,7 +22,6 @@ services:
       - DB_PASSWORD=changeme123
     depends_on:
       - db
-      
 
   db:
     image: postgres:13-alpine
@@ -32,6 +32,6 @@ services:
       - POSTGRES_USER=devuser
       - POSTGRES_PASSWORD=changeme123
 
-
 volumes:
   dev-db-data:
+  dev-static-data:
